# rulewarn

./: README.md  configure.ac.patch
.claws-mail/: RuleWarn.py
src/plugins/: Makefile.am.patch
src/plugins/rulewarn/: Makefile.am  rulewarn.c
